Updated json to final model, changed question model to work with new json